force-app/main/default/objects/CC_Parametrizaciones_Consultas_Operativa__c/CC_Parametrizaciones_Consultas_Operativa__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings con las parametrizaciones de las tematicas/canales de resolución/colas</description>
    <label>CC_Parametrizaciones_Consultas_Operativa</label>
</CustomObject>