force-app/main/default/objects/CC_Parametrizaciones_Consultas_Operativa__c/fields/CC_Canal_resolucion__c.field-meta.xml
<CustomField>
    <fullName>CC_Canal_resolucion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canal resolucion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>