force-app/main/default/objects/CC_Parametrizaciones_Consultas_Operativa__c/fields/CC_Cola__c.field-meta.xml
<CustomField>
    <fullName>CC_Cola__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cola</label>
    <length>40</length>
    <type>Text</type>
</CustomField>