force-app/main/default/objects/CC_Parametrizaciones_Consultas_Operativa__c/fields/CC_Tematica__c.field-meta.xml
<CustomField>
    <fullName>CC_Tematica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tematica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>